tests/errors/circular-reference.wit
reference ./circular-reference/a.wit

@root
  - uses @a
root@
